[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/CrumblingBlock.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 61.2258, 15.9609 )

[node name="CrumblingBlock" type="RigidBody2D"]

position = Vector2( 866.949, 310.703 )
rotation = -0.0915435
input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = true
continuous_cd = 0
contacts_reported = 5
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "collision" ]
shakePow = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="." index="1"]

modulate = Color( 0.902344, 0.465271, 0, 1 )
scale = Vector2( 2, 0.5 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="body_entered" from="." to="." method="_on_CrumblingBlock_body_entered"]

[connection signal="body_shape_entered" from="." to="." method="_on_CrumblingBlock_body_shape_entered"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


